# polytracker

./: Dockerfile
polytracker/custom_abi/: CMakeLists.txt  dfsan_abilist.txt  harfbuzz  libpng  polytracker_abilist.txt
polytracker/include/polytracker/passes/: taint_tracking.h
polytracker/include/taintdag/: error.h  labels.h  polytracker.h
polytracker/src/compiler-rt/lib/dfsan/: dfsan.cpp
polytracker/src/passes/: taint_tracking.cpp
polytracker/src/polytracker/: polytracker.cpp
polytracker/src/taint_sources/: memory_taints.cpp
polytracker/src/taintdag/: encoding.cpp  polytracker.cpp
