install(
  FILES dfsan_abilist.txt
        polytracker_abilist.txt
        fontconfig
        freetype
        gmp
        harfbuzz
        jbig
        libdeflate
        libjpeg
        libpng
        libtiff
        libz
        openjpeg
        ssl
        xml2
  DESTINATION ${POLYTRACK_RULE_DIR})
