install(
  FILES dfsan_abilist.txt
        polytracker_abilist.txt
        fontconfig
        freetype
        gmp
        harfbuzz
        jbig
        libcrypto
        libdeflate
        libdl
        libjpeg
        liblzma
        libm
        libonig
        libpng
        libpthread
        libssl
        libtiff
        libz
        openjpeg
        openssl
        openssl_asm
        ssl
        xml2
  DESTINATION ${POLYTRACK_RULE_DIR})
